preprocessing iphone, samsung audio files

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,12 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "tel = {'jack': {'jack': 4098, 'sape': 4139}, 'sape': 4139}\n",
+    "audios_features = {}\n",
+    "audios_features['A1111'] = {}\n",
+    "audios_features['A1111']['target'] = 'sick'\n",
+    "audios_features['A1111']['device']['iphone']['1']['path'] = '/sada/asdas/asd'\n",
+    "audios_features['A1111']['device']['iphone']['1']['features']['spectrogram'] = [1,2,3,4,5,6]\n",
+    "audios_features['A1111']['device']['iphone']['1']['features']['soundnet'] = [1,2,3,4,5,6]\n",
+    "audios_features['A1111']['device']['iphone']['1']['features']['PCA'] = [1,2,3,4,5,6]\n",
+    "audios_features['A1111']['device']['iphone']['1'][]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
