--- a/sounds_preprocessing.ipynb
+++ b/sounds_preprocessing.ipynb
@@ -263,14 +263,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 1200 audio files\n"
+      "Preprocessed 1200 audio files\nPreprocessed 1300 audio files\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 1300 audio files\nPreprocessed 1400 audio files\n"
+      "Preprocessed 1400 audio files\n"
      ]
     }
    ],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -609,21 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 100 audio files\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessed 200 audio files\n"
+      "Preprocessed 100 audio files\nPreprocessed 200 audio files\n"
      ]
     },
     {
@@ -767,28 +760,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 100 audio files\nPreprocessed 200 audio files\nPreprocessed 300 audio files\nPreprocessed 400 audio files\n"
+      "Preprocessed 100 audio files\nPreprocessed 200 audio files\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 500 audio files\nPreprocessed 600 audio files\nPreprocessed 700 audio files\nPreprocessed 800 audio files\nPreprocessed 900 audio files\nPreprocessed 1000 audio files\n"
+      "Preprocessed 300 audio files\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed 1100 audio files\nPreprocessed 1200 audio files\nPreprocessed 1300 audio files\nPreprocessed 1400 audio files\n"
+      "Preprocessed 400 audio files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 500 audio files\nPreprocessed 600 audio files\nPreprocessed 700 audio files\nPreprocessed 800 audio files\nPreprocessed 900 audio files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 1000 audio files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 1100 audio files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 1200 audio files\nPreprocessed 1300 audio files\nPreprocessed 1400 audio files\n"
      ]
     }
    ],
