added feature extraction for iphone and samsung records

--- a/feature_extracting_from_sounds.ipynb
+++ b/feature_extracting_from_sounds.ipynb
@@ -55,20 +55,6 @@
      "text": [
       "Preprocessed 500 audio files\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessed 600 audio files\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessed 700 audio files\n"
-     ]
     }
    ],
    "source": [
@@ -88,7 +74,7 @@
     "for i in list_subdirs:\n",
     "    s += 1\n",
     "    if (s % LOG_EVERY_N) == 0:\n",
-    "        print \"Preprocessed \"+str(s)+\" audio files\"  \n",
+    "        print \"Preprocessed \"+str(s)+\" people records\"  \n",
     "    directory = audio_folder+'/'+i+'/'\n",
     "    new_directory = spectrograms_folder+'/'+i+'/'\n",
     "    if not os.path.exists(new_directory):\n",
@@ -96,7 +82,7 @@
     "    #\n",
     "    list_wav = glob.glob(directory+\"*.wav\")\n",
     "    for k in range(len(list_wav)):\n",
-    "        spectrogram_dir = spectrogram_folder+'/'+i+'/'+ i+'_'+list_wav[k].split('/')[-1].split('.')[0]+'.png'\n",
+    "        spectrogram_dir = spectrograms_folder+'/'+i+'/'+ i+'_'+list_wav[k].split('/')[-1].split('.')[0]+'.png'\n",
     "        #command = \"sox \"+list_wav[k]+\" -n spectrogram -l -r -o \"+spectrogram_dir\n",
     "        command = \"sox \"+list_wav[k]+\" -n spectrogram -l -m -r -w Kaiser -o \"+spectrogram_dir\n",
     "        os.system(command)"
@@ -158,11 +144,25 @@
     "    audios_features[subfolder] = {}\n",
     "    audios_features[subfolder]['device'] = {}\n",
     "    audios_features[subfolder]['device']['studio'] = {}\n",
+    "    audios_features[subfolder]['device']['iphone'] = {}\n",
+    "    audios_features[subfolder]['device']['samsung'] = {}\n",
     "    for spectrogram_file in spectrograms_files_list:\n",
-    "        audio_features = img_to_matrix(spectrogram_file)\n",
-    "        audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]] = {}\n",
-    "        audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]]['features'] = {}\n",
-    "        audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]]['features']['spectrogram'] = audio_features\n",
+    "        if spectrogram_file.split('_')[-1].split('a')[0]=='s':\n",
+    "            audio_features = img_to_matrix(spectrogram_file)\n",
+    "            audios_features[subfolder]['device']['samsung'][spectrogram_file.split('/')[-1]] = {}\n",
+    "            audios_features[subfolder]['device']['samsung'][spectrogram_file.split('/')[-1]]['features'] = {}\n",
+    "            audios_features[subfolder]['device']['samsung'][spectrogram_file.split('/')[-1]]['features']['spectrogram'] = audio_features\n",
+    "       \n",
+    "        elif spectrogram_file.split('_')[-1].split('a')[0]=='i':\n",
+    "            audio_features = img_to_matrix(spectrogram_file)\n",
+    "            audios_features[subfolder]['device']['iphone'][spectrogram_file.split('/')[-1]] = {}\n",
+    "            audios_features[subfolder]['device']['iphone'][spectrogram_file.split('/')[-1]]['features'] = {}\n",
+    "            audios_features[subfolder]['device']['iphone'][spectrogram_file.split('/')[-1]]['features']['spectrogram'] = audio_features \n",
+    "        else:\n",
+    "            audio_features = img_to_matrix(spectrogram_file)\n",
+    "            audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]] = {}\n",
+    "            audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]]['features'] = {}\n",
+    "            audios_features[subfolder]['device']['studio'][spectrogram_file.split('/')[-1]]['features']['spectrogram'] = audio_features\n",
     "\n",
     "if not os.path.exists(audios_features_folder):\n",
     "    os.makedirs(audios_features_folder)\n",
