--- a/sounds_preprocessing.ipynb
+++ b/sounds_preprocessing.ipynb
@@ -858,11 +858,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 100 audio files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed 200 audio files\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 20] Not a directory: 'audio_preparation/Audio_splitted_mp3/.DS_Store/'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-aaaa7897bebb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mnew_directory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmp3_audios_dir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_directory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_directory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mlist_wav\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"*.wav\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_wav\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/vidmantasbendikas/tensorflow/lib/python2.7/os.pyc\u001b[0m in \u001b[0;36mmakedirs\u001b[0;34m(name, mode)\u001b[0m\n\u001b[1;32m    155\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtail\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mcurdir\u001b[0m\u001b[0;34m:\u001b[0m           \u001b[0;31m# xxx/newdir/. exists if xxx/newdir exists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m     \u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mremovedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 20] Not a directory: 'audio_preparation/Audio_splitted_mp3/.DS_Store/'"
+     ],
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import glob\n",
+    "mp3_audios_dir = 'audio_preparation/Audio_splitted_mp3'\n",
+    "Audio_splitted = 'audio_preparation/Audio_splitted'\n",
+    "\n",
+    "if not os.path.exists(mp3_audios_dir):\n",
+    "    os.makedirs(mp3_audios_dir)\n",
+    "\n",
+    "list_subdirs = os.listdir(Audio_splitted)\n",
+    "\n",
+    "error_count=0\n",
+    "s=0\n",
+    "for i in list_subdirs:\n",
+    "    s += 1\n",
+    "    if (s % LOG_EVERY_N) == 0:\n",
+    "        print \"Preprocessed \"+str(s)+\" audio files\"  \n",
+    "    directory = Audio_splitted+'/'+i+'/'\n",
+    "    new_directory = mp3_audios_dir+'/'+i+'/'\n",
+    "    if not os.path.exists(new_directory):\n",
+    "        os.makedirs(new_directory)\n",
+    "    list_wav = glob.glob(directory+\"*.wav\")\n",
+    "    for k in range(len(list_wav)):\n",
+    "        try:\n",
+    "            new_audio_file = list_wav[k].split('/')[-1].split('.')[0]+'.mp3'\n",
+    "            new_audio_dir = mp3_audios_dir+'/'+i+'/'+new_audio_file\n",
+    "            command = \"ffmpeg -i \"+list_wav[k]+\" -acodec libmp3lame \"+new_audio_dir\n",
+    "            os.system(command)\n",
+    "        except Exception:\n",
+    "            error_count+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert all mp3 with following command will do the trick"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os \n",
+    "import glob\n",
+    "mp3_audios_converted_dir = 'SoundNet-tensorflow/data'\n",
+    "mp3_audios_dir = 'audio_preparation/Audio_splitted_mp3'\n",
+    "\n",
+    "file = open(\"SoundNet-tensorflow/data.txt\",\"w\") \n",
+    "if not os.path.exists(mp3_audios_converted_dir):\n",
+    "    os.makedirs(mp3_audios_converted_dir)\n",
+    "\n",
+    "list_subdirs = os.listdir(mp3_audios_dir)\n",
+    "\n",
+    "error_count=0\n",
+    "s=0\n",
+    "for i in list_subdirs:\n",
+    "    s += 1\n",
+    "    if (s % LOG_EVERY_N) == 0:\n",
+    "        print \"Preprocessed \"+str(s)+\" audio files\"  \n",
+    "    directory = mp3_audios_dir+'/'+i+'/'\n",
+    "    list_mp3 = glob.glob(directory+\"*.mp3\")\n",
+    "    for k in range(len(list_mp3)):\n",
+    "        try:\n",
+    "            new_audio_file = i+\"_\"+list_mp3[k].split('/')[-1]\n",
+    "            file.write(\"./data/\"+new_audio_file+\"\\n\") \n",
+    "            new_audio_dir = mp3_audios_converted_dir+'/'+new_audio_file\n",
+    "            command = \"sox \"+list_mp3[k]+\" \"+new_audio_dir+\" trim 0\"\n",
+    "            os.system(command)\n",
+    "        except Exception:\n",
+    "            error_count+=1\n",
+    "file.close() "
+   ]
   }
  ],
  "metadata": {
